tests/examples/bad/new_invalid_type.lat
int main() {
    int a = new int;
    return 1;
}
